example/secondfile/objects/Email_Template__c.object
<CustomObject>
    <description>Collab</description>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Format_Updated_in_Dev__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Format Updated in Dev</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Email_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Email Template</label>
        <referenceTo>Email_Template__c</referenceTo>
        <relationshipLabel>Email Templates</relationshipLabel>
        <relationshipName>Email_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Template_Name__c</fullName>
        <label>New Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_In_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not In Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Setup_Link__c</fullName>
        <label>Setup Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Unique_Name__c</fullName>
        <label>Template Unique Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Email Template</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Email Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>